--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -120,6 +120,70 @@
       <p><i>No namespaces without ResourceQuota were found..</i></p>
       {% endif %}
     </div>
+
+    <div class="section">
+      <h2>PVCs Unbound</h2>
+      {% if pvc_unbound %}
+      <ul>{% for pvc in pvc_unbound %}<li>{{ pvc }}</li>{% endfor %}</ul>
+      {% else %}
+      <p><i>No unbound PVCs were found.</i></p>
+      {% endif %}
+    </div>
+
+    <div class="section">
+      <h2>PVCs Pending</h2>
+      {% if pvc_pending %}
+      <ul>{% for pvc in pvc_pending %}<li>{{ pvc }}</li>{% endfor %}</ul>
+      {% else %}
+      <p><i>No pending PVCs were found.</i></p>
+      {% endif %}
+    </div>
+
+    <div class="section">
+      <h2>Workloads with single replica</h2>
+      {% if single_replica %}
+      <ul>{% for w in single_replica %}<li>{{ w }}</li>{% endfor %}</ul>
+      {% else %}
+      <p><i>No single replica workloads were found.</i></p>
+      {% endif %}
+    </div>
+
+    <div class="section">
+      <h2>Workloads without resources</h2>
+      {% if no_resources %}
+      <ul>{% for w in no_resources %}<li>{{ w }}</li>{% endfor %}</ul>
+      {% else %}
+      <p><i>All workloads have resource requests and limits.</i></p>
+      {% endif %}
+    </div>
+
+    <div class="section">
+      <h2>Privileged ServiceAccounts</h2>
+      {% if priv_sa %}
+      <table>
+        <thead>
+          <tr>
+            <th>Namespace</th>
+            <th>App</th>
+            <th>ServiceAccount</th>
+            <th>SCC</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for sa in priv_sa %}
+          <tr>
+            <td>{{ sa.namespace }}</td>
+            <td>{{ sa.name }}</td>
+            <td>{{ sa.sa }}</td>
+            <td>{{ sa.scc }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      {% else %}
+      <p><i>No workloads using privileged service accounts were found.</i></p>
+      {% endif %}
+    </div>
   </div>
 </body>
 </html>
